--- a/modules/gateway/assertions/CsrfProtectionAssertion/src/main/java/com/l7tech/external/assertions/csrfprotection/console/resources/CsrfProtectionAssertionPropertiesDialog.form
+++ b/modules/gateway/assertions/CsrfProtectionAssertion/src/main/java/com/l7tech/external/assertions/csrfprotection/console/resources/CsrfProtectionAssertionPropertiesDialog.form
@@ -39,7 +39,7 @@
               </hspacer>
             </children>
           </grid>
-          <grid id="f4ecf" binding="doubleSubmitCookiesSettingsPanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="f4ecf" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -47,7 +47,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="9be61" class="javax.swing.JLabel">
+              <component id="9be61" class="javax.swing.JLabel" binding="cookieNameLabel">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -55,7 +55,7 @@
                   <text value="Cookie Name"/>
                 </properties>
               </component>
-              <component id="ba6ec" class="javax.swing.JLabel">
+              <component id="ba6ec" class="javax.swing.JLabel" binding="parameterNameLabel">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -130,7 +130,7 @@
               </hspacer>
             </children>
           </grid>
-          <grid id="3b2ae" binding="httpRefererValidationSettingsPanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="3b2ae" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -138,7 +138,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="c3313" class="javax.swing.JLabel">
+              <component id="c3313" class="javax.swing.JLabel" binding="refererOptionsLabel">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -169,7 +169,7 @@
                   </hspacer>
                 </children>
               </grid>
-              <component id="39313" class="javax.swing.JLabel">
+              <component id="39313" class="javax.swing.JLabel" binding="validDomainsLabel">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -206,7 +206,7 @@
                       </hspacer>
                     </children>
                   </grid>
-                  <grid id="71840" binding="trustedDomainsPanel" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                  <grid id="71840" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
                       <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
