--- a/modules/gateway/assertions/CsrfProtectionAssertion/src/main/java/com/l7tech/external/assertions/csrfprotection/console/resources/CsrfProtectionAssertionPropertiesDialog.form
+++ b/modules/gateway/assertions/CsrfProtectionAssertion/src/main/java/com/l7tech/external/assertions/csrfprotection/console/resources/CsrfProtectionAssertionPropertiesDialog.form
@@ -14,7 +14,7 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
-        <border type="none" title="Double Submit Cookies Validation"/>
+        <border type="none" title-resource-bundle="com/l7tech/external/assertions/csrfprotection/console/resources/CsrfProtectionAssertionPropertiesDialog" title-key="doubleSubmitCookiesValidation"/>
         <children>
           <grid id="de519" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
@@ -29,7 +29,7 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Enable Double Submit Cookie Validation"/>
+                  <text resource-bundle="com/l7tech/external/assertions/csrfprotection/console/resources/CsrfProtectionAssertionPropertiesDialog" key="enableDoubleSubmitCookiesValidation"/>
                 </properties>
               </component>
               <hspacer id="e7dfd">
@@ -105,7 +105,7 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
-        <border type="none" title="HTTP-Referer Header Validation"/>
+        <border type="none" title-resource-bundle="com/l7tech/external/assertions/csrfprotection/console/resources/CsrfProtectionAssertionPropertiesDialog" title-key="httpRefererHeaderValidation"/>
         <children>
           <grid id="642ff" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
@@ -120,7 +120,7 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Enable HTTP-Referer Validation"/>
+                  <text resource-bundle="com/l7tech/external/assertions/csrfprotection/console/resources/CsrfProtectionAssertionPropertiesDialog" key="enableHTTPRefererHeaderValidation"/>
                 </properties>
               </component>
               <hspacer id="70075">
